Send the WebMouseWheelEvents unconverted if Shift is down.

WebMouseWheelEvents were converted based on Shift getting set. This should
not happen. Instead swap the X&Y before we goto generate the scroll
gesture.

BUG=646109

Review-Url: https://codereview.chromium.org/2359463002
Cr-Commit-Position: refs/heads/master@{#419966}

Former-commit-id: d5d0c8bf89ad9b6a03122b6620bdbbdcd406bb79